--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  transition: background-color 0.5s;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.dark-button {
+  border-radius: 50%  
+  ;
+  margin-top: 0px;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  z-index: 2; 
+}
+.dark-button:hover{
+  background-color: #0b5485;
+}
+ @media (max-width: 991px) {
+   .dark-button {
+    top: 18px;
+   right: 30%;
+    
+   
+ }
+  }
+.dark-mode h1 , h2 , h3 {
+  color: #fff;
+}
+.dark-mode.FilterContact{
+  color: #fff;
+}
+nav {
+  
+  border-radius: 0px 0px 10px 10px;
+  z-index: 1; 
+}
+.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+.light-mode {
+  background-color: #fff;
+  color: #333;
+}
+
+
